index.css
* {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
  text-align: center;
}

button {
  cursor: pointer;
  border: none;
  background-color: rgb(200, 200, 200);
  border-radius: 4px;
  font-size: 1.3em;
  padding: 4px 8px;
  margin: -1px;
}

input {
  border-radius: 4px;
  border: 1px solid gray;
  padding: 5px;
  font-size: 14px;
}

select {
  font-size: 16px;
  border-radius: 4px;
  padding: 3px;
}

#headerSpace {
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
  height: 9vh;
}

#header {
  background: #343a40;
  width: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  height: 62px;
  color: #eeeeee;
  z-index: 4;
}

#header h1 {
  margin: 5px;
}

.bikediv {
  margin: 5.5px 4px;
  border: 1.4px solid rgb(180, 180, 180);
  border-radius: 5px;
  padding: 4px;
  display: inline-block;
  width: 30vw;
  /* height: 60vmin; */
  vertical-align: top;
  position: relative;
}

.bikediv h4 {
  margin-bottom: 0;
}

.bikediv p {
  margin-top: 7px;
}

.bikeimg {
  display: block;
  max-width: 28vw;
  max-height: 31vh;
  margin: auto;
}

.showPrice {
  font-weight: 450;
}

.bikebuttons {
  width: 120px;
  border: 1px solid black;
  border-radius: 5px;
  padding: 4px;
  margin: auto;
  text-align: center;
  position: absolute;
  bottom: 5px;
  left: 50%;
  margin-left: -60px;
}

.plusbtn {
  float: right;
  background: #007bff;
}

.minbtn {
  float: left;
  background: #dc3545;
}

.bikenum {
  position: relative;
  font-size: 24px;
  margin: 8px;
  width: 24px;
}

#showHeight {
  cursor: pointer;
}

.heightIn {
  position: relative;
  top: 3px;
}

.oneRider {
  display: inline-block;
  text-align: left;
  width: 60vw;
  left: 20vw;
  font-size: 18px;
  border: 1px solid black;
  padding: 8px;
  padding-left: 14px;
  border-radius: 5px;
  margin-bottom: 5px;
}

.riderBikeName {
  font-size: 30px;
  font-weight: bold;
}

.month td {
  width: 30px;
  height: 30px;
}

.month thead {
  font-size: 14px;
}

.monthDay:hover {
  background: rgba(2,117,216,.5);
  cursor: pointer;
}

.month {
  display: inline-block;
  border-collapse: collapse;
  margin: 0 5px;
  margin-bottom: 5px;
}

#payRight {
  width: 80vw;
  position: absolute;
  left: 10vw;
  text-align: left;
  padding-bottom: 100px;
}

#payPage input {
  width: calc(100% - 16px);
  font-size: 16px;
  padding: 6px 8px;
  margin-bottom: 0;
}

#payPage label {
  display: block;
  margin-bottom: 5px;
}

.moreInputInfo {
  margin: 0;
  font-size: 15px;
  color: gray;
}

#nextbtn {
  position: fixed;
  bottom: 4vh;
  width: 100px;
  padding: 6px;
  right: 2vw;
  background: #007bff;
  color: #eeeeee;
  font-size: 1.5em;
  transition: all .4s;
}

#backbtn {
  position: fixed;
  bottom: 4vh;
  width: 100px;
  padding: 6px;
  left: 5vh;
  font-size: 1.5em;
  transition: all .4s;
}

@media (orientation: portrait) {
  .bikediv {
    height: 48vw;
  }
}

@media screen and (max-width: 980px) {
  .bikediv {
    width: 45vw;
  }
  .bikeimg {
    max-width: 40vw;
  }
}

@media screen and (max-width: 847px) {
  .oneRider {
    width: 80vw;
    left: 10vw;
  }
}

@media screen and (max-width: 749px) { /* Goes completely to list here */
  .bikeimg { 
    max-width: 85vw;
  }
  .bikediv {
    width: 90vw;
    margin: 5px auto;
    padding: 4px;
    height: auto;
  }
  .bikebuttons {
    position: relative;
  }
  .plusbtn, .minbtn {
    margin: -2px;
  }
  #nextbtn {
    right: 5vw;
  }
}

@media screen and (max-width: 411px) {
  #nextbtn, #backbtn {
    bottom: 6vh;
    width: 80px;
  }
}

@media screen and (max-width: 375px) {
  #header h1 {
    font-size: 24px;
    margin: 9px
  }
}

@media screen and (max-width: 348px) {
  .riderBikeName {
    font-size: 26px;
  }
}

.none {
  display: none;
}

.blue {
  background: #0275d8;
}

.blue:hover {
  background: #0275d8;
}

